[gd_scene load_steps=6 format=3 uid="uid://la76mhk4dtny"]

[ext_resource type="Script" uid="uid://cr4kpmuxspurl" path="res://Guns/gun.gd" id="1_jcdfn"]
[ext_resource type="Theme" uid="uid://8kbukp78eoe6" path="res://Menu/main_menu.tres" id="2_axm6k"]
[ext_resource type="AudioStream" uid="uid://665o3c0yxpmb" path="res://Guns/Audio/single-gunshot-42-80288.mp3" id="3_jcdfn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jcdfn"]
albedo_color = Color(0.129412, 0.262745, 0.129412, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jcdfn"]
material = SubResource("StandardMaterial3D_jcdfn")
radius = 0.1
height = 1.0

[node name="Pistol" type="Node3D"]
script = ExtResource("1_jcdfn")
max_ammo = 1
reload_speed = 0.5
damage = 50

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_axm6k")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoLabel" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "10/10"

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(0.999743, 0, 0.0226873, 0, 1, 0, -0.0226873, 0, 0.999743, 0.226, -0.269, -0.464)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_jcdfn")
skeleton = NodePath("../..")

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="RayCast" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, 0, -20)
collision_mask = 10
collide_with_areas = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jcdfn")

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
